--- a/client-customer/package.json
+++ b/client-customer/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "moment": "^2.26.0",
     "vue": "^2.6.11",
+    "vue-google-login": "^2.0.5",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
